--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,10 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
+    "/css/jquery.tagsinput.css": "/css/jquery.tagsinput.css",
     "/css/post.css": "/css/post.css",
     "/css/home.css": "/css/home.css",
-    "/js/main.js": "/js/main.js"
+    "/js/jquery.tagsinput.js": "/js/jquery.tagsinput.js",
+    "/js/main.js": "/js/main.js",
+    "/js/post.js": "/js/post.js"
 }
