--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "laravel/ui": "1.*"
+        "laravel/ui": "1.*",
+        "league/flysystem-aws-s3-v3": "1.0.29"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
