--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,7 +4,10 @@
     "/css/jquery.tagsinput.css": "/css/jquery.tagsinput.css",
     "/css/post.css": "/css/post.css",
     "/css/home.css": "/css/home.css",
+    "/css/mypage.css": "/css/mypage.css",
     "/js/jquery.tagsinput.js": "/js/jquery.tagsinput.js",
     "/js/main.js": "/js/main.js",
-    "/js/post.js": "/js/post.js"
+    "/js/mypage.js": "/js/mypage.js",
+    "/js/post.js": "/js/post.js",
+    "/js/store.js": "/js/store.js"
 }
