--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,7 @@
     "/css/app.css": "/css/app.css",
     "/css/jquery.tagsinput.css": "/css/jquery.tagsinput.css",
     "/css/post.css": "/css/post.css",
+    "/css/planpage.css": "/css/planpage.css",
     "/css/home.css": "/css/home.css",
     "/css/mypage.css": "/css/mypage.css",
     "/js/jquery.tagsinput.js": "/js/jquery.tagsinput.js",
