--- a/package.json
+++ b/package.json
@@ -10,21 +10,28 @@
         "production": "node_modules/cross-env/dist/bin/cross-env.js NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@mdi/font": "^6.2.95",
         "axios": "^0.18",
         "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
+        "deepmerge": "^2.2.1",
+        "fibers": "^5.0.0",
         "jquery": "^3.6.0",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
+        "sass": "^1.42.1",
+        "sass-loader": "^7.3.1",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.8"
     },
     "dependencies": {
+        "@mdi/js": "^6.2.95",
+        "@mdi/react": "^1.5.0",
         "bootstrap-icons": "^1.5.0",
+        "vue-resource": "^1.5.3",
+        "vuetify": "^2.5.9",
         "vuex": "^3.6.2"
     }
 }
