--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,11 +6,13 @@
     "/css/planpage.css": "/css/planpage.css",
     "/css/home.css": "/css/home.css",
     "/css/mypage.css": "/css/mypage.css",
+    "/css/login.css": "/css/login.css",
     "/css/formpage.css": "/css/formpage.css",
     "/css/comment.css": "/css/comment.css",
     "/css/profile.css": "/css/profile.css",
     "/css/usersview.css": "/css/usersview.css",
     "/css/searchpage.css": "/css/searchpage.css",
+    "/css/spotview.css": "/css/spotview.css",
     "/js/jquery.tagsinput.js": "/js/jquery.tagsinput.js",
     "/js/main.js": "/js/main.js",
     "/js/mypage.js": "/js/mypage.js",
