--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -14,6 +14,7 @@
     "/css/searchpage.css": "/css/searchpage.css",
     "/css/spotview.css": "/css/spotview.css",
     "/js/jquery.tagsinput.js": "/js/jquery.tagsinput.js",
+    "/js/modal.js": "/js/modal.js",
     "/js/mypage.js": "/js/mypage.js",
     "/js/post.js": "/js/post.js",
     "/js/profile.js": "/js/profile.js",
