--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             # CircleCI に登録した秘密鍵を呼び出す
             - add_ssh_keys: 0b:41:9c:34:ff:ca:1a:fe:7e:f8:4c:71:d1:e7:5e:39
             # CircleCI に登録した環境変数を使って SSH
-            - run: ssh ${USER_NAME}@${HOST_NAME} 'cd /var/www/html/TripFinder && git pull'
+            - run: ssh ${USER_NAME}@${HOST_NAME} 'cd ~/var/www/html/TripFinder && git pull'
 
 workflows:
     version: 2
