--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ workflows:
                 requires:
                     # 依存性あるから deploy ジョブより先に build ジョブを実行してね、という命令
                     - build
-                # master ブランチに push された場合のみ deploy ジョブを実行するfilterd
+                # master ブランチに push された場合のみ deploy ジョブを実行するfilter
                 filters:
                     branches:
                         only: master
