--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,18 +21,21 @@ jobs:
             - add_ssh_keys:
                 fingerprints:
                   - 34:c3:cd:f2:41:e6:33:a8:9f:1b:04:f7:70:75:f5:f1
-            #
+            # CircleCI に登録した環境変数を使って SSH接続
             - run: ssh ${USER_NAME}@${HOST_NAME} 'cd /var/www/html/TripFinder && git pull'
 
 workflows:
     version: 2
-
+    # build_and_deploy ジョブ: 一番最初に呼ばれるジョブ
     build_and_deploy:
+        # build ジョブと deploy ジョブを登録する
         jobs:
             - build
             - deploy:
                 requires:
+                    # 依存性あるから deploy ジョブより先に build ジョブを実行してね、という命令
                     - build
+                # master ブランチに push された場合のみ deploy ジョブを実行するfilterです
                 filters:
                     branches:
                         only: master
