再度コミット

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -14,6 +14,7 @@
     "/css/jquery.tagsinput.css": "/css/jquery.tagsinput.css",
     "/css/accordion.css": "/css/accordion.css",
     "/css/tabs.css": "/css/tabs.css",
+    "/css/app_mobile.css": "/css/app_mobile.css",
     "/js/jquery.tagsinput.js": "/js/jquery.tagsinput.js",
     "/js/modal.js": "/js/modal.js",
     "/js/profile.js": "/js/profile.js",
