--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "@mdi/js": "^6.2.95",
         "@mdi/react": "^1.5.0",
         "bootstrap-icons": "^1.5.0",
+        "heic-convert": "^1.2.4",
+        "heic2any": "^0.0.3",
         "vue-js-modal": "^2.0.1",
         "vue-resource": "^1.5.3",
         "vuetify": "^2.5.9",
